Fixed titlebar position on smaller layouts

--- a/css/site.css
+++ b/css/site.css
@@ -155,6 +155,8 @@ a, a:visited, a:active, a:hover { text-decoration: none; color: #11a; }
 }
 
 @media (max-width: 760px){
+    
+    #titleBar { position: fixed; left: 0; right: 0; top: 0; z-index: 100; }
    
     #inputPanel { 
         position: static;
@@ -165,6 +167,7 @@ a, a:visited, a:active, a:hover { text-decoration: none; color: #11a; }
         overflow-y: auto;
         border-bottom: 1px solid #a0a0a0;
         border-right: none;
+        margin-top: 4.5em;
     }
     
     #inputPanel .navPanel h3 { text-align: center; }
